--- a/src/styles/components/_Nav.scss
+++ b/src/styles/components/_Nav.scss
@@ -1,3 +1,5 @@
+@use '../utils/variables.scss' as var;
+
 .bm-burger-button {
   position: fixed;
   width: 28px;
@@ -7,18 +9,18 @@
 }
 
 .bm-burger-bars {
-  background: #ff9800;
+  background: var.$primary-color;
 }
 
 .bm-menu {
-  background: #fff;
+  background: var.$white;
   padding: 2.5em 1.5em 0;
   font-size: 1.2em;
 }
 
 .menu-item {
   display: block;
-  color: #ff9800;
+  color: var.$primary-color;
   padding: 1rem 0;
   text-decoration: none;
   font-weight: 600;
@@ -26,5 +28,5 @@
 }
 
 .menu-item:hover {
-  color: #e68900;
+  color:  var.$primary-color;
 }
