--- a/src/styles/components/_PokemonList.scss
+++ b/src/styles/components/_PokemonList.scss
@@ -1,8 +1,9 @@
+@use "../utils/variables.scss" as var;
 
 .pokemon-card {
-  background: #fff;
+  background: var.$white;
   border-radius: 16px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
   width: 100%;
   max-width: 220px;
   display: flex;
@@ -11,27 +12,43 @@
   position: relative;
   overflow: hidden;
   margin: 0.5rem;
-  border: 2px solid #f5f5f5;
+  border: 2px solid var.$white;
   transition: transform 0.2s, box-shadow 0.2s;
+
+  img {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+    margin: 1rem 0 0.5rem 0;
+    background: transparent;
+  }
+  button {
+    background-color: var.$primary-color;
+    color: var.$white;
+    border: none;
+    border-radius: 8px;
+    padding: 8px 20px;
+    font-weight: bold;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background 0.2s, color 0.2s;
+    margin: 10px;
+  }
+  button:hover {
+    background-color: var.$white;
+    color: var.$primary-color;
+  }
 }
 
 .pokemon-card:hover {
   transform: translateY(-4px) scale(1.03);
-  box-shadow: 0 4px 16px rgba(0,0,0,0.12);
-}
-
-.pokemon-card img {
-  width: 100px;
-  height: 100px;
-  object-fit: contain;
-  margin: 1rem 0 0.5rem 0;
-  background: transparent;
+  box-shadow: 0 4px 16px var.$black;
 }
 
 h2 {
   width: 100%;
-  background: #ff9800;
-  color: #fff;
+  background: var.$primary-color;
+  color: var.$white;
   text-align: center;
   font-size: 1.1rem;
   font-weight: 500;
